--- a/gb/24/1/9/n14154322.md
+++ b/gb/24/1/9/n14154322.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>男主人穿丛林服测爱犬智商 结果令人捧腹</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154335-Tanyssa-Moise-final-1080x720-600x400.jpg" />///image2=```diff
 - 来自加拿大的莫伊兹夫妇非常喜欢与他们饲养的三只爱犬玩一些有趣的游戏。（Jade the Sable GSD提供）
@@ -8,63 +8,59 @@
 <h6>来自加拿大的莫伊兹夫妇非常喜欢与他们饲养的三只爱犬玩一些有趣的游戏。（Jade the Sable GSD提供）
 </h6>
 <hr>
-	<p>【大纪元2024年01月09日讯】（英文大纪元记者<ahref="https://www.theepochtimes.com/bright/funny-video-man-puts-on-a-bush-costume-to-test-his-3-dogs-the-result-leaves-his-wife-laughing-5535173">Anna Mason</a>报导／张雨霏编译）塔妮莎（Tanyssa）和布拉德?莫伊兹（Brad Moise）夫妇喜欢与他们饲养的三只<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%88%B1%E7%8A%AC.md#1">爱犬</a>玩一些有趣的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%88%8F.md#1">游戏</a>，其中一场捉迷藏游戏尤其好玩，给无数网友带去了欢乐。</p>
-<p>布拉德把自己伪装成<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%8C%E6%9C%A8%E4%B8%9B.md#1">灌木丛</a>，躲到自家院子的某个角落，然后让<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD%E7%89%A7%E7%BE%8A%E7%8A%AC.md#1">德国牧羊犬</a>“杰德”（Jade）、“贾斯珀”（Jasper）和“杰特”（Jet）出来寻找。当三只狗被放出来后，很明显它们可以闻到主人的味道，但不知道他的具体位置。</p>
+	<p>【大纪元2024年01月09日讯】（英文大纪元记者<ahref="https://www.theepochtimes.com/bright/funny-video-man-puts-on-a-bush-costume-to-test-his-3-dogs-the-result-leaves-his-wife-laughing-5535173">Anna Mason</a>报导／张雨霏编译）塔妮莎（Tanyssa）和布拉德?莫伊兹（Brad Moise）夫妇喜欢与他们饲养的三只爱犬玩一些有趣的游戏，其中一场捉迷藏游戏尤其好玩，给无数网友带去了欢乐。</p>
+<p>布拉德把自己伪装成灌木丛，躲到自家院子的某个角落，然后让德国牧羊犬“杰德”（Jade）、“贾斯珀”（Jasper）和“杰特”（Jet）出来寻找。当三只狗被放出来后，很明显它们可以闻到主人的味道，但不知道他的具体位置。</p>
 <p>“我进到屋里打开门，把狗放了出去”，塔妮莎说，“我告诉它们去找男主人。”</p>
-<figure id="attachment_14154333" aria-describedby="caption-attachment-14154333" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154333-Js15.jpg"><img class=" wp-image-14154333" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154333-Js15.jpg" alt="" width="400" b="533" /></a><figcaption id="caption-attachment-14154333" class="wp-caption-text">莫伊兹夫妇和他们饲养的三只德牧：杰特、贾斯珀和杰德。<ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
+<figure id="attachment_14154333" aria-describedby="caption-attachment-14154333" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154333-Js15.jpg"><img decoding="async" class=" wp-image-14154333" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154333-Js15.jpg" alt="" width="400" b="533" /></a><figcaption id="caption-attachment-14154333" class="wp-caption-text">莫伊兹夫妇和他们饲养的三只德牧：杰特、贾斯珀和杰德。<ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
 <p>视频显示，7岁的杰德、4岁的贾斯珀和2岁的杰特围着诺大的庭院四处奔跑，一心想要找到它们心爱的主人。不用说，当它们找到他时，个个欣喜若狂。这段现已火爆的视频已获得超过1,600万次的浏览量。</p>
-<p>塔妮莎在视频中经常被称为凯伦（Karen），而布拉德则被称为凯文（Kevin），这对夫妇目前已累积的450万粉丝非常喜欢观看他们与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8B%97%E7%8B%97.md#1">狗狗</a>们的有趣互动。</p>
-<p>塔妮莎说，自从她在网络上发布一些年幼的贾斯珀刚到家时的生活点滴时，他们的粉丝群就开始飙升。为了让粉丝更开心，她开始在亚马逊上搜寻搞笑的服装，以便让她的丈夫穿上和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8B%97%E7%8B%97.md#1">狗狗</a>们玩各种逗趣的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%88%8F.md#1">游戏</a>。</p>
-<figure id="attachment_14154336" aria-describedby="caption-attachment-14154336" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154336-Screenshot-2024-01-09-1.png"><img class=" wp-image-14154336" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154336-Screenshot-2024-01-09-1.png" alt="" width="601" b="433" /></a><figcaption id="caption-attachment-14154336" class="wp-caption-text"><ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
-<p>“我偶然发现了这件带有巨大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%8C%E6%9C%A8%E4%B8%9B.md#1">灌木丛</a>的猎装”，她说，“我觉得那太完美了。而布拉德也已经习惯了我给他买的各种奇异服装，他不介意穿上它们。”</p>
+<p>塔妮莎在视频中经常被称为凯伦（Karen），而布拉德则被称为凯文（Kevin），这对夫妇目前已累积的450万粉丝非常喜欢观看他们与狗狗们的有趣互动。</p>
+<p>塔妮莎说，自从她在网络上发布一些年幼的贾斯珀刚到家时的生活点滴时，他们的粉丝群就开始飙升。为了让粉丝更开心，她开始在亚马逊上搜寻搞笑的服装，以便让她的丈夫穿上和狗狗们玩各种逗趣的游戏。</p>
+<figure id="attachment_14154336" aria-describedby="caption-attachment-14154336" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154336-Screenshot-2024-01-09-1.png"><img decoding="async" class=" wp-image-14154336" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154336-Screenshot-2024-01-09-1.png" alt="" width="601" b="433" /></a><figcaption id="caption-attachment-14154336" class="wp-caption-text"><ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
+<p>“我偶然发现了这件带有巨大灌木丛的猎装”，她说，“我觉得那太完美了。而布拉德也已经习惯了我给他买的各种奇异服装，他不介意穿上它们。”</p>
 <p>塔妮莎认为，他们很受欢迎的部分原因在于他们宠物犬的美丽。</p>
-<p>“这些<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD%E7%89%A7%E7%BE%8A%E7%8A%AC.md#1">德国牧羊犬</a>都是天生的工作犬，长着美丽的紫貂色皮毛，使得它们看上去有些独特。”她说。</p>
+<p>“这些德国牧羊犬都是天生的工作犬，长着美丽的紫貂色皮毛，使得它们看上去有些独特。”她说。</p>
 <p>这家人住在加拿大里诺湖（Reno Lake）附近，他们最喜欢一起做的事情之一就是周末到户外探索大自然、徒步旅行或租一间户外小屋享受一下片刻的宁静。冬天的严寒天气也丝毫没有影响到这些顽强的狗狗。</p>
-<figure id="attachment_14154332" aria-describedby="caption-attachment-14154332" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154332-Js8.jpg"><img class=" wp-image-14154332" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154332-Js8.jpg" alt="" width="400" b="533" /></a><figcaption id="caption-attachment-14154332" class="wp-caption-text"><ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
+<figure id="attachment_14154332" aria-describedby="caption-attachment-14154332" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154332-Js8.jpg"><img decoding="async" class=" wp-image-14154332" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154332-Js8.jpg" alt="" width="400" b="533" /></a><figcaption id="caption-attachment-14154332" class="wp-caption-text"><ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
 <p>“它们根本不在乎，它们希望全天都在外面玩。这些狗不适合胆小的人饲养，它们需要一位坚定、始终如一、强大的领导者，因为它们喜欢挑战极限。”她说。</p>
 <p>陪它们玩耍并不断发明新游戏是一种非常有效的方法，这样不仅可以让它们获得乐趣，还可以保持它们的参与度和挑战感。</p>
 <p>“它们很聪明，学习能力强，但它们也需要充足的体力和智力锻炼。”塔妮莎说。</p>
-<figure id="attachment_14154334" aria-describedby="caption-attachment-14154334" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154334-Tanyssa-Moise.jpg"><img class=" wp-image-14154334" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154334-Tanyssa-Moise.jpg" alt="" width="450" b="445" /></a><figcaption id="caption-attachment-14154334" class="wp-caption-text"><ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
+<figure id="attachment_14154334" aria-describedby="caption-attachment-14154334" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14154334-Tanyssa-Moise.jpg"><img decoding="async" class=" wp-image-14154334" src="https://i.epochtimes.com/assets/uploads/2024/01/id14154334-Tanyssa-Moise.jpg" alt="" width="450" b="445" /></a><figcaption id="caption-attachment-14154334" class="wp-caption-text"><ahref="https://www.instagram.com/jadethesablegsd">Jade the Sable GSD</a>提供）</figcaption></figure>
 <p>这对夫妇创造的局面是双赢的，因为他们为照顾狗狗投入大量时间和精力的同时，也改变了自己的生活方式，心态变得更积极、更乐观。</p>
 <p>值得一提的是，由于他们经营的<ahref="https://www.instagram.com/jadethesablegsd">社交媒体页面</a>越来越受欢迎，以至于给他们带来了足够的收入，因此塔妮莎可以暂时停止和法律有关的紧张工作。</p>
-<p>“一旦我们决定全职投入制作网络视频，我们就可以自由地与狗狗们待在一起，并尽我们最大的能力照顾好它们。”她说，“我真的很喜欢通过分享实用的训狗技巧，为世界各地的人们带去欢乐的同时，也为狗狗这个群体带来一些改变。”</p>
+<p>“一旦我们决定全职投入制作网络视频，我们就可以自由地与狗狗们待在一起，并尽我们最大的能力照顾好它们。”她说，“我真的很喜欢通过分享实用的训狗技巧，为世界各地的人们带去欢乐的同时，也为狗狗这个群体带来一些改变。”◇</p>
 </p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://divmj5v44rbg.cloudfront.net/L1pij1rGw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/hPfJXwWXiO8?si=54VATXbh8LN06_YA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p><center><a title="YouTube video player" src=""></a><a href="https://d3c3t179l61pwn.cloudfront.net/F1nL1qqQb"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/hPfJXwWXiO8?si=54VATXbh8LN06_YA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <p>责任编辑：韩玉#</p>
 	
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/30/n13197218.md#1">贴心！获救犬每天精心准备“礼物”迎接主人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/29/n13769823.md#1">组图：贪吃狗狗接零食的瞬间表情 超搞笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132459.md#1">提前感知主人病了 狗狗用这种方式发警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135403.md#1">小主人突然跑向陌生男 护卫犬的反应超暖心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">车用刮冰器 带泡沫手柄 180° 旋转刷头（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：三合一车用手机架 七五折限时优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/30/n13197218.md#1">贴心！获救犬每天精心准备“礼物”迎接主人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/29/n13769823.md#1">组图：贪吃狗狗接零食的瞬间表情 超搞笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/8/n14132459.md#1">提前感知主人病了 狗狗用这种方式发警告</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/13/n14135403.md#1">小主人突然跑向陌生男 护卫犬的反应超暖心</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/20/n11600972.md#1" target="_blank">【历史回眸】赵紫阳赞港英统治模式和蒋经国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151381.md#1">【未解之谜】中西预言2024出大事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14143930.md#1">昭昭天意——管窥预言中的后中共时代及未来（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144838.md#1">星空高远万重天 世人多是天上来（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148869.md#1">【未解之谜】龙年特辑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150138.md#1">台湾小将李任悦登桌球U13组世界第一</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152511.md#1">【环球直击】美安全委员会：波音737MAX 9事故是意外</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/8/n14153882.md#1">【新闻大破解】中共导弹注水曝光 火箭军遭清洗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/8/n14153996.md#1">【舞蹈】飞天艺术学院2023第二学期舞蹈考试 (高班 男生）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/7/n14152820.md#1">中国福彩造假被抓包？主持人念出没开的号码</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/7/n14152890.md#1">大陆演员高虎被曝以送外卖为生 网民证实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152631.md#1">好莱坞男星奥列佛坠机身亡 父女3人全罹难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152598.md#1">被水果摊主当成50多岁 林心如表情举止崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/8/n14153688.md#1">黄子佼遭传轻生消息 经纪公司火速辟谣吐近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151970.md#1">胡歌曾动念5年不拍戏 原因竟然与王家卫有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152014.md#1">陆歌手薛之谦“翻车” 品牌羽绒服质检不合格</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：70年护肤品牌 舒缓沐浴露七折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">5合1防滑金属毛衣衣架（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/7/n14152938.md#1">研究：老人睡觉时闻香味 记忆力有惊人改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152299.md#1">应该跟酒说拜拜的5个理由 让专家告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137972.md#1">蜂蜜怎么吃最管用？百年中医家族公开16种妙用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284970.md#1">【环球直击】英国大选工党获胜 新首相面临考验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285779.md#1">【车评】美式豪电车 2024 Cadillac LYRIQ Sport 3 AWD</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/9/n14154322.htm">男主人穿丛林服测爱犬智商 结果令人捧腹</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154322.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/1/9/n14154322.htm">男主人穿丛林服测爱犬智商 结果令人捧腹</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/9/n14154322.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
